...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qfC-2s-hwm">
                                <rect key="frame" x="152.33333333333334" y="773" width="109.33333333333334" height="42.666666666666629"/>
                                <fontDescription key="fontDescription" name="DroidArabicKufi-Bold" family="Droid Arabic Kufi" pointSize="12"/>
                                <state key="normal" title="تخطي">
                                    <color key="titleColor" red="0.25490196078431371" green="0.25490196078431371" blue="0.25490196078431371" alpha="0.60000002384185791" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="btnSkipClicked:" destination="une-dj-SKq" eventType="touchUpInside" id="SNg-fC-rI1"/>
                                    <segue destination="oYA-9E-3r7" kind="presentation" modalPresentationStyle="fullScreen" id="482-KS-yfP"/>
                                </connections>
...
                                <color key="backgroundColor" red="0.43529411764705883" green="0.13333333333333333" blue="0.50980392156862742" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42.799999999999997" id="9ZD-PE-kuf"/>
                                    <constraint firstAttribute="width" constant="109.3" id="gXf-ei-HVI"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="DroidArabicKufi-Bold" family="Droid Arabic Kufi" pointSize="12"/>
                                <state key="normal" title="التالي"/>
                                <connections>
                                    <action selector="btnNextClicked:" destination="une-dj-SKq" eventType="touchUpInside" id="lxa-lh-r9l"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fvk-JU-R5G">
                                <rect key="frame" x="54" y="93.999999999999972" width="306" height="478.33333333333326"/>
...
                                <color key="backgroundColor" red="0.43529411764705883" green="0.13333333333333333" blue="0.50980392156862742" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42.799999999999997" id="In0-vd-EqF"/>
                                    <constraint firstAttribute="width" constant="109.3" id="OR6-nQ-JQH"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="DroidArabicKufi-Bold" family="Droid Arabic Kufi" pointSize="12"/>
                                <state key="normal" title="البدء"/>
                                <connections>
                                    <action selector="btnNextClicked:" destination="cGO-qH-zgV" eventType="touchUpInside" id="vQ7-as-mQn"/>
                                    <segue destination="oYA-9E-3r7" kind="presentation" modalPresentationStyle="fullScreen" id="xdC-G2-VOu"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hw4-ow-yI5">
...
                                                <fontDescription key="fontDescription" name="DroidArabicKufi" family="Droid Arabic Kufi" pointSize="11"/>
                                                <color key="textColor" red="0.25490196078431371" green="0.25490196078431371" blue="0.25490196078431371" alpha="0.60000002384185791" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="container2"/>
                                        <constraints>
                                            <constraint firstAttribute="trailing" secondItem="peT-Mq-L96" secondAttribute="trailing" constant="42" id="4JP-8j-bQD"/>
                                            <constraint firstAttribute="trailing" secondItem="JkT-GA-LMy" secondAttribute="trailing" constant="8" id="Ccz-RX-lFt"/>
                                            <constraint firstItem="peT-Mq-L96" firstAttribute="leading" secondItem="2Pr-tn-USN" secondAttribute="leading" constant="42" id="P7Y-bG-xTs"/>
                                            <constraint firstAttribute="bottom" secondItem="JkT-GA-LMy" secondAttribute="bottom" id="RcH-1W-Ucq"/>
                                            <constraint firstItem="peT-Mq-L96" firstAttribute="top" secondItem="2Pr-tn-USN" secondAttribute="top" constant="15" id="ZOZ-fe-LxA"/>
...
