...
                                        <rect key="frame" x="116.5" y="87" width="140" height="35"/>
                                        <color key="backgroundColor" name="PageControlDotSelected"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="0w4-Sc-F4S"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="DroidArabicKufi" family="Droid Arabic Kufi" pointSize="13"/>
                                        <state key="normal" title="ابحث">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="didTapSearchButton:" destination="JnX-DG-6dI" eventType="touchUpInside" id="vDI-4B-Wv3"/>
                                        </connections>
                                    </button>
...
